--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,11 @@
   <servlet>
     <servlet-name>dispatchServlet</servlet-name>
     <servlet-class>cn.edu.zju.servlet.DispatchServlet</servlet-class>
+    <multipart-config>
+      <file-size-threshold>0</file-size-threshold>
+      <max-file-size>209715200</max-file-size>
+      <max-request-size>209715200</max-request-size>
+    </multipart-config>
   </servlet>
 
   <servlet-mapping>
