--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,3 +1,3 @@
-jdbc.url=jdbc:mysql://127.0.0.1/biomed?serverTimezone=GMT%2B8
-jdbc.username=root
-jdbc.password=123456
+jdbc.url=jdbc:mysql://127.0.0.1:3309/biomed?serverTimezone=GMT%2B8
+jdbc.username=biomed
+jdbc.password=biomed
