--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,3 +1,3 @@
-jdbc.url=jdbc:mysql://127.0.0.1:3306/biomed?serverTimezone=GMT%2B8&useSSL=false
+jdbc.url=jdbc:mysql://127.0.0.1:3306/biomed?serverTimezone=GMT%2B8&useSSL=false&allowPublicKeyRetrieval=true
 jdbc.username=biomed
 jdbc.password=biomed
